# substrait-packaging

./: .gitignore  README.md  pixi.toml
.github/workflows/: python_antlr.yml  python_protobuf.yml
python/: .gitignore  README.md  buf.gen.yaml  generate_antlr.sh  generate_protobuf.sh
python/substrait-antlr/: README.md  generate_antlr.sh  pyproject.toml
python/substrait-antlr/src/substrait_antlr/func_test_case/: FuncTestCaseLexer.py  FuncTestCaseParser.py  FuncTestCaseParserListener.py  FuncTestCaseParserVisitor.py
python/substrait-antlr/src/substrait_antlr/substrait_type/: SubstraitLexer.py  SubstraitTypeLexer.py  SubstraitTypeListener.py  SubstraitTypeParser.py  SubstraitTypeVisitor.py
python/substrait-antlr/tests/: __init__.py  test_antlr.py
python/substrait-extensions/: README.md  pyproject.toml
python/substrait-extensions/src/substrait_extensions/: __init__.py
python/substrait-extensions/tests/: __init__.py
python/substrait-protobuf/: README.md  generate_protobuf.sh  pyproject.toml  testprotos.proto
python/substrait-protobuf/src/substrait/: algebra_pb2.py  algebra_pb2.pyi  plan_pb2.pyi  type_pb2.py  type_pb2.pyi
python/substrait-protobuf/src/substrait/extensions/: extensions_pb2.pyi
python/substrait-protobuf/src/substrait_protobuf/substrait/: algebra_pb2.py  algebra_pb2.pyi  capabilities_pb2.py  capabilities_pb2.pyi  extended_expression_pb2.py  extended_expression_pb2.pyi  function_pb2.py  function_pb2.pyi  parameterized_types_pb2.py  parameterized_types_pb2.pyi  plan_pb2.py  plan_pb2.pyi  type_expressions_pb2.py  type_expressions_pb2.pyi  type_pb2.py  type_pb2.pyi
python/substrait-protobuf/src/substrait_protobuf/substrait/extensions/: extensions_pb2.py  extensions_pb2.pyi
python/substrait-protobuf/tests/: __init__.py  test_proto.py
