[project]
name = "substrait-protobuf"
version = "0.1.0"
description = "Substrait Protocol Buffer definitions"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [
    {name = "Substrait Contributors", email = "substrait@googlegroups.com"}
]

dependencies = [
    "protobuf >=5,<7",
]

[project.urls]
Homepage = "https://substrait.io"
Repository = "https://github.com/substrait-io/substrait-packaging"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2.0"]
build-backend = "setuptools.build_meta"
